Updated html file

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 <div class="project-tile">
                     <div class="project-image">📑</div>
                     <div class="project-content">
-                        <h3 class="project-title">Data Analytics Dashboard</h3>
+                        <h3 class="project-title">Python Programming Documentation</h3>
                         <p class="project-description">
                             A projcet to build a technical documentation page to serve as instruction or reference for a topic.
                         </p>
@@ -523,7 +523,7 @@
                 <div class="project-tile">
                     <div class="project-image">🗟</div>
                     <div class="project-content">
-                        <h3 class="project-title">Interactive Game Platform</h3>
+                        <h3 class="project-title">CloudSync Pro - Product Landing Page</h3>
                         <p class="project-description">
                             A project to build a product landing page to market a product of my choice.
                         </p>
