Updated the html file

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="project-tile">
                     <div class="project-image">🗳️</div>
                     <div class="project-content">
-                        <h3 class="project-title">E-Commerce Platform</h3>
+                        <h3 class="project-title">Professional Survey Form</h3>
                         <p class="project-description">
                             A project to build a survey form to colect data from my users.
                         </p>
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="project-tile">
-                    <div class="project-image">🗟</div>
+                    <div class="project-image">🛄</div>
                     <div class="project-content">
                         <h3 class="project-title">CloudSync Pro - Product Landing Page</h3>
                         <p class="project-description">
